--- a/User/css/appointment.css
+++ b/User/css/appointment.css
@@ -128,6 +128,9 @@ section h2::after {
     list-style: none;
     display: flex;
     gap: 20px;
+
+    margin: 0;
+    padding: 0;
 }
 
 .navbar ul li a {
