--- a/User/css/home.css
+++ b/User/css/home.css
@@ -83,7 +83,6 @@ body {
 section {
     padding: 60px 20px;
     margin-bottom: 0;
-    /* box-shadow: 0 2px 10px var(--transparancy); */
     text-align: center;
 }
 
@@ -104,8 +103,8 @@ section h2::after {
     width: 80px;
     height: 4px;
     border: none;
-    /* background-color: var(--section); */
-    /* border-radius: 2px; */
+    background-color: var(--section);
+    border-radius: 2px;
 }
 /* End Global Section Style */
 
@@ -636,6 +635,67 @@ section h2::after {
     font-size: 0.875rem;
 }
 /* End Hotlines */
+
+/* Social Media */
+.social-media-section {
+    padding: 50px 20px;
+    text-align: center;
+}
+
+
+.social-media-section h2 {
+    font-size: 2.25rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+    text-align: center;
+    color: var(--section-head-text);
+}
+
+.social-links {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.social-link-card {
+    background-color: #edf2f7;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 25px;
+    width: 500px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    flex-direction: column;    
+    align-items: center;
+    justify-content: center;
+   
+}
+
+.social-link-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.social-link-card img {
+    width: 100px;
+    height: auto;
+}
+
+.social-link-card h3 {
+    font-size: 1.5em;
+    color: #007bff;
+    margin-bottom: 10px;
+}
+
+.social-link-card p {
+    font-size: 1em;
+    color: #555;
+}
+
+/* End Social Media */
 
 /* Footer */
 .footer {
